# nova

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  _buf2sb.pl  bench.toml  build_libuv.ps1  decisions.md  f11_out.txt  nova.toml  regen_runtime.bat  regen_runtime.ps1  run_tests.ps1  run_tests.sh
.githooks/: commit-msg
82-artifacts/: .gitignore  build.ps1  f0-rediagnosis.md  f0_gc_link.c  f0_probe.c  f0_test_a.c  f0_test_d.c  f0_test_e.c  f1-report.md  f1_arena_test.c  f1_gc_test.c  f5_ctxswitch_bench.c
83.2-artifacts/: f0-readiness.md
compiler/: Cargo.toml  README.md
compiler-bootstrap/: README.md
compiler-codegen/: .gitignore  Cargo.toml  README.md  build.rs  build_c.bat  build_c.ps1  build_c.sh
compiler-codegen/examples/: arithmetic.nv  effects.c  effects_d61.c  gc_coroutines_test.c  gc_coroutines_test.nv  spawn.nv  strings.c  with_tests.c
compiler-codegen/nova_rt/: LIBUV_UPDATE.md  alloc.c  alloc.h  alloc_boehm.c  alloc_rc.c  array.h  bench.h  buffer.h  cast.h  channels.h  contracts.h  conv.h  deque.h  driver.c  driver.h  effects.c  effects.h  eventloop.c  eventloop.h  fiber_arena.c  fiber_arena.h  fiber_arena_win.c  fiber_stats.c  fibers.c  fibers.h  gc_test_helpers.c  math.h  net.c  net.h  nova_msvc_compat.h  nova_rt.h  nova_sched.h  numeric.h  plan115_ffi_test.h  read_buffer.h  run_deep_tests.bat  runq.h  runtime.c  runtime.h  sched.h  (+17 more)
compiler-codegen/src/: argbind.rs  callnorm.rs  chain_norm.rs  const_fn_closure.rs  const_fn_eval.rs  const_fn_mono.rs  const_fn_trampoline.rs  desugar.rs  diag.rs  effect_surface.rs  escape_analyze.rs  field_cache.rs  git_cache.rs  imports.rs  lib.rs  lints.rs  lockfile.rs  main.rs  manifest.rs  number_exprs.rs  perf_timer.rs  resolver.rs  semver.rs  sig_registry.rs  test_runner.rs
compiler-codegen/src/ast/: format_spec.rs  mod.rs  pretty.rs
compiler-codegen/src/codegen/: emit_c.rs  external_registry.rs  gc_layout.rs  may_gc.rs  mod.rs  overload_sig.rs  preempt_keep.rs  runtime_registry.rs  sum_schema_registry.rs  unicode_data.rs
compiler-codegen/src/doc/: collect_handlers.rs  collector.rs  config.rs  doctests.rs  doctree.rs  highlight.rs  json_parse.rs  links.rs  lints.rs  markdown.rs  mcp.rs  mod.rs  mutation.rs  query.rs  render_html.rs  render_json.rs  render_md.rs  schema.rs  scraper.rs  stability.rs  test_runner.rs  watch_cache.rs
compiler-codegen/src/interp/: mod.rs  stdlib.rs  value.rs
compiler-codegen/src/lexer/: mod.rs  token.rs
compiler-codegen/src/parser/: mod.rs
compiler-codegen/src/protocols/: auto_derive.rs  mod.rs
compiler-codegen/src/types/: mod.rs
compiler-codegen/src/verify/: cache.rs  crosscheck.rs  encode.rs  handler_exec.rs  ir.rs  mod.rs  pipeline.rs  smtlib.rs  subsumption_cache.rs  suggest.rs
compiler-codegen/src/verify/backend/: cvc5.rs  mod.rs  trivial.rs  z3.rs  z3_ffi.rs
compiler-codegen/tests/: doc_allow_transit.rs  doc_expect_output.rs  doc_extern_links.rs  doc_golden.rs  doc_handler_matrix.rs  doc_handler_matrix_workspace.rs  doc_html_multipage.rs  doc_html_render.rs  doc_lints_scope.rs  doc_mcp.rs  doc_mcp_http.rs  doc_mutation.rs  doc_mutation_exec.rs  doc_mutation_workspace.rs  doc_newtype.rs  doc_perf.rs  doc_query.rs  doc_render_expr.rs  doc_schema_shape.rs  doc_schema_v1_promote.rs  doc_semver_diff.rs  doc_source_url.rs  doc_warnings.rs  doc_workspace_determinism.rs  git_dep_e2e.rs  integration.rs  interp_tool_unsupported.rs  lockfile_repro.rs  spec_nova.rs  syntax_highlight_conformance.rs  version_lock_repro.rs  version_resolve_e2e.rs
compiler/examples/: effects.nv  effects_d61.nv  with_tests.nv
compiler/src/ast/: mod.rs
compiler/src/interp/: mod.rs  stdlib.rs
compiler/src/lexer/: mod.rs  token.rs
compiler/src/parser/: mod.rs
compiler/src/types/: mod.rs
compiler/tests/: integration.rs  spec_nova.rs
compiler/tests-nova/: 01_literals.nv  02_operators.nv  05_functions.nv  06_records.nv  07_sum_types.nv  09_methods.nv  10_arrays.nv  12_ranges_for.nv  13_effects.nv  14_throws.nv  21_closures.nv  24_recursion.nv  25_coalesce_and_annotations.nv  27_higher_order.nv  28_effects_composition.nv  29_integration.nv
compiler/tests/common/: mod.rs
detect172/: basics.c  basics.nv  char_methods.nv  d227_numeric_literal_range_pos.nv  gc_intrinsic.nv  rawmem_transitive.nv  str_from.nv  str_methods.nv  stringbuilder.nv  u13b_gap_a_self_method_pos.nv  u172_2_method_arg_narrowing_pos.nv  u172_option_sum_structural_eq_pos.nv  u172c_option_container_eq_structural_pos.nv  u172h_option_hashmap_eq_structural_pos.nv  u172r_option_record_structural_eq_pos.nv  u181_result_over_named_tuple_pos.nv  u181b_anon_record_in_ctor_arg_pos.nv  u33i_instance_overload_pos.nv  u3_1_overload_resolve_pos.nv  u3_3_method_overload_resolve_pos.nv  u43c2_instance_multi_overload_dispatch_pos.nv  u43d_generic_method_overload_dispatch_pos.nv  u44_array_lit_pos.nv  u44_generic_member_pos.nv  u44_if_expr_pos.nv  u44_index_element_pos.nv  u44_match_arm_pos.nv  u44_primitive_member_pos.nv  u44_tuple_lit_pos.nv  (+3 more)
nova-cli/: Cargo.toml
nova-cli/src/: build_cache.rs  main.rs
nova-cli/src/bench/: ai.rs  anomaly.rs  callgrind.rs  config.rs  corpus.rs  cpu_instr.rs  criterion_compat.rs  dashboard.rs  diff.rs  errno.rs  field_cache_wallclock.rs  gate.rs  history.rs  hyperfine.rs  membw.rs  mod.rs  noise.rs  profile.rs  remote.rs  report.rs  repro.rs  run.rs  schema.rs  stats.rs
nova-cli/tests/: edition_resolve.rs  entry_folder_module.rs  interp_unsupported.rs  run_interp_named.rs
nova-lsp/: Cargo.toml  README.md
nova-lsp/src/: code_actions.rs  compiler.rs  completion.rs  debouncer.rs  diagnostic_mapping.rs  format.rs  goto_definition.rs  hover.rs  incremental.rs  lib.rs  main.rs  perf.rs  rename.rs  semantic_tokens_delta.rs  server.rs  signature_help.rs  state.rs  symbol.rs  symbols.rs
nova-lsp/tests/: build_smoke.rs  compiler_adapter.rs  completion.rs  document_cache.rs  e2e_smoke.rs  field_cache_lens.rs  integration.rs  lifecycle.rs  lifecycle_memory.rs  perf.rs  publish_workflow.rs  symbols_references.rs  workspace.rs
(+6440 files in other folders)
