[package]
name = "nova-codegen"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Nova codegen compiler — compiles Nova to native binary via C backend"
publish = false

[[bin]]
name = "nova-codegen"
path = "src/main.rs"

[lib]
name = "nova_codegen"
path = "src/lib.rs"

[features]
# Default — без внешних SMT-зависимостей (TrivialBackend).
# `z3-backend` подключает libz3 через vcpkg (см. compiler-codegen/build.rs +
# vcpkg.json). Plan 33 Z3 milestone: закрывает V1 simplification.
#
# FFI bindings — собственные (в src/verify/backend/z3_ffi.rs), без
# external `z3`/`z3-sys` crate. Это удерживает Cargo dep-tree
# минимальным (см. feedback_third_party_libs: обёртки только в наших
# файлах) и позволяет точно контролировать linkage через build.rs.
default = []
z3-backend = []

[dependencies]
# Минимум зависимостей. Bootstrap должен собираться с пустым lockfile
# на любой stable Rust 1.85+.
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
# Размер не оптимизируем — это bootstrap.
opt-level = 0

[profile.dev]
debug = true
