[package]
name = "nova"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Nova bootstrap compiler — minimal treewalk interpreter"
publish = false

[[bin]]
name = "nova"
path = "src/main.rs"

[lib]
name = "nova"
path = "src/lib.rs"

[dependencies]
# Минимум зависимостей. Bootstrap должен собираться с пустым lockfile
# на любой stable Rust 1.85+.
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
# Размер не оптимизируем — это bootstrap.
opt-level = 0

[profile.dev]
debug = true
