[package]
name = "nova"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Nova language CLI — build, run, test Nova programs"
publish = false

[[bin]]
name = "nova"
path = "src/main.rs"

[features]
# Plan 33 V1: forward z3-backend во вложенный nova_codegen.
# Build: `cargo build --release --features z3-backend` из nova-cli/.
default = []
z3-backend = ["nova_codegen/z3-backend"]

[dependencies]
clap         = { version = "4", features = ["derive"] }
anyhow       = "1"
serde_json   = "1"
nova_codegen = { path = "../compiler-codegen", package = "nova-codegen" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
lto = "thin"
